<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bikeSteer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:isScrollContainer="true"
    tools:context=".BikeSteer" >

<LinearLayout
    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
<TableLayout
    android:id="@+id/paramTable"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableRow
        android:id="@+id/headRow"
        android:layout_width="0dip"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/param1"
            style="@style/tvTable"
            android:text="@string/head"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/headAngle"
            style="@style/etTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/rakeRow"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/rakeText"
            style="@style/tvTable"
            android:text="@string/rake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/rake"
            style="@style/etTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ToggleButton
            android:id="@+id/rakeButton"
            style="@style/mmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </TableRow>
    
    <TableRow
        android:id="@+id/aToCRow"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/aToCText"
            style="@style/tvTable"
            android:text="@string/aToC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/aToC"
            style="@style/etTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ToggleButton
            android:id="@+id/aToCButton"
            style="@style/mmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </TableRow>
    
    <TableRow
        android:id="@+id/wheelRow"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/wheelText"
            style="@style/tvTable"
            android:text="@string/wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/wheel"
            style="@style/etTable"
            android:layout_width="wrap_content"/>

        <ToggleButton
            android:id="@+id/wheelButton"
            style="@style/mmBtn" />

    </TableRow>


</TableLayout>

<Button
    android:id="@+id/goButton"
    style="@style/goBtn"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:text="@string/go" 
    android:onClick="calculate"/>

<TableLayout
    android:id="@+id/resultTable"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableRow
        android:id="@+id/headtubeRow"
        android:layout_width="0dip"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/result1"
            style="@style/tvTable"
            android:text="@string/headtubeBottom"/>

        <EditText
            android:id="@+id/headTube"
            style="@style/etTable"  >

            <requestFocus />
        </EditText>
        
        <ToggleButton
            android:id="@+id/headtubeButton"
            style="@style/mmBtn" />

    </TableRow>

    <TableRow
        android:id="@+id/trailRow"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/trailText"
            style="@style/tvTable"
            android:text="@string/trail" />

        <EditText
            android:id="@+id/trail"
            style="@style/etTable"  />

        <ToggleButton
            android:id="@+id/trailButton"
            style="@style/mmBtn" />

    </TableRow>
    
    


</TableLayout>

</LinearLayout>

</ScrollView>